// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<button
  className="components-field-reset-button-m__button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="components-field-reset-button-m__content-wrapper"
  >
    <FaClose
      className="components-field-reset-button-m__icon"
    />
  </span>
</button>
`;

exports[`should render correctly when disabled 1`] = `
<button
  className="components-field-reset-button-m__button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="components-field-reset-button-m__content-wrapper"
  >
    <FaClose
      className="components-field-reset-button-m__icon"
    />
  </span>
</button>
`;
